# android_remocons

./: .classpath  .gitignore  .project  CHANGELOG.rst  CMakeLists.txt  Makefile  README.md  build.gradle  configure.py  package.xml  rocon_android.rosinstall  settings.gradle  stack.xml
.github/workflows/: gradle.yml  maven.yml
NfcFun/: AndroidManifest.xml
NfcFun/res/layout/: main.xml  nfcread.xml  nfcwrite.xml
NfcFun/res/values/: strings.xml
NfcFun/src/com/exam/Nfc/: NfcFunActivity.java  NfcReaderActivity.java  NfcWriteActivity.java  YujinNfcManager.java  YujinUtil.java
WiFiFun/: AndroidManifest.xml
WiFiFun/res/layout/: main.xml
WiFiFun/res/values/: strings.xml
WiFiFun/src/com/exam/wifi/: WiFiFunActivity.java
common_tools/: build.gradle
common_tools/graveyard/common_tools/: AppLauncher.java  AppsManager.java  ConcertChecker.java  ListenerNode.java  NfcManager.java  NfcReaderActivity.java  Util.java
common_tools/graveyard/common_tools/zeroconf/: MasterSearcher.java
common_tools/src/main/: AndroidManifest.xml
common_tools/src/main/res/layout/: zeroconf_master_item.xml  zeroconf_master_list.xml
concert_remocon/: build.gradle
concert_remocon/src/main/: AndroidManifest.xml
concert_remocon/src/main/res/layout/: concert_master_chooser.xml  main.xml  master_item.xml  robot_master_chooser.xml
concert_remocon/src/main/res/menu/: concert_master_chooser_option_menu.xml
concert_remocon/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
graveyard/application_management/: build.gradle
graveyard/rocon_android_connector/: .project  AndroidManifest.xml  manifest.xml  project.properties  turtlebot_android.keystore
graveyard/rocon_android_connector/res/layout/: main.xml
graveyard/rocon_android_connector/res/values/: strings.xml
graveyard/rocon_nfc_writer/: .project  AndroidManifest.xml
headless_launcher/: README.md  build.gradle
headless_launcher/src/main/: AndroidManifest.xml
headless_launcher/src/main/res/layout/: activity_alert_dialog.xml  main.xml
headless_launcher/src/main/res/menu/: menu_alert_dialog.xml
headless_launcher/src/main/res/values/: strings.xml
listener/: build.gradle
listener/src/main/: AndroidManifest.xml
listener/src/main/res/layout/: main.xml
listener/src/main/res/values/: strings.xml
remocon_management/: build.gradle
remocon_management/src/main/: AndroidManifest.xml
robot_remocon/: build.gradle
robot_remocon/src/main/: AndroidManifest.xml
robot_remocon/src/main/res/layout/: add_uri_dialog.xml  main.xml  master_item.xml
robot_remocon/src/main/res/layout-land/: add_uri_dialog.xml
robot_remocon/src/main/res/values/: strings.xml
rocon_android_application_management/: .classpath  .project  AndroidManifest.xml  CMakeLists.txt  build.gradle  package.xml
rocon_android_application_management/src/: Readme.md
rocon_android_application_management/src/main/: AndroidManifest.xml
rocon_android_application_management/src/main/java/org/rocon/android/apps/application_management/: AppManager.java  CheckableLinearLayout.java  MasterChecker.java  RobotDescription.java  RosAppActivity.java
rocon_android_application_management/src/org/rocon/android/apps/application_management/: AppManager.java  ControlChecker.java  Dashboard.java  MasterChecker.java  RobotDescription.java  RobotId.java  RobotNameResolver.java  RobotsContentProvider.java  RosAppActivity.java  WifiChecker.java
rocon_android_connector/: AndroidManifest.xml  lint.xml
rocon_android_connector/res/layout/: main.xml  nfc_reader.xml
rocon_android_connector/res/values/: strings.xml
rocon_android_connector/rocon_app_manager/: .gitignore  .pydevproject
rocon_android_connector/rocon_app_manager/msg/: AppDescription.msg  Constants.msg  ErrorCodes.msg  PlatformInfo.msg  Remapping.msg
rocon_android_connector/rocon_app_manager/srv/: GetAppList.srv  GetPlatformInfo.srv  Init.srv  Invite.srv  StartApp.srv  Status.srv  StopApp.srv
rocon_android_listener/: build.gradle
rocon_android_listener/src/main/: AndroidManifest.xml
rocon_android_robot_remoticon/: .classpath  .project  AndroidManifest.xml  CMakeLists.txt  Makefile  build.gradle  package.xml  project.properties
rocon_android_robot_remoticon/res/layout/: main.xml  master_item.xml
rocon_android_robot_remoticon/res/values/: strings.xml
rocon_android_robot_remoticon/src/main/: AndroidManifest.xml
rocon_android_robot_remoticon/src/main/java/org/rocon/android/apps/robot_remoticon/: AppAdapter.java  AppLauncher.java  ClientAppData.java  MasterAdapter.java  MasterItem.java  RobotMasterChooser.java  RobotRemoticon.java
rocon_android_robot_remoticon/src/main/java/org/rocon/android/apps/robot_remoticon/zeroconf/: DiscoveryAdapter.java  DiscoveryHandler.java  DiscoverySetup.java  Logger.java  MasterSearcher.java
rocon_android_robot_remoticon/src/main/res/values/: strings.xml
rocon_android_robot_remoticon/src/org/rocon/android/apps/robot_remoticon/: AppAdapter.java  AppLauncher.java  ClientAppData.java  MasterAdapter.java  MasterItem.java  RobotMasterChooser.java  RobotRemoticon.java  RoconAndroidRobotRemoticon.java
rocon_android_robot_remoticon/src/org/rocon/android/apps/robot_remoticon/hydro/: AppAdapter.java  AppLauncher.java  ClientAppData.java  MasterAdapter.java  MasterItem.java  RobotMasterChooser.java  RobotRemoticon.java
rocon_android_robot_remoticon/src/org/ros/android/zeroconf/: DiscoveryAdapter.java
rocon_nfc_writer/: README.md  build.gradle
rocon_nfc_writer/res/layout/: activity_main.xml
rocon_nfc_writer/res/values/: strings.xml
rocon_nfc_writer/src/com/rocon/nfc/: RoconNfcManager.java
rocon_nfc_writer/src/main/: AndroidManifest.xml
rocon_nfc_writer/src/main/res/layout/: activity_main.xml  main.xml
rocon_nfc_writer/src/main/res/values-v11/: styles.xml
rocon_nfc_writer/src/main/res/values-v14/: styles.xml
rocon_remocon/: build.gradle
rocon_remocon/src/main/: AndroidManifest.xml
talker/: build.gradle
talker/src/main/: AndroidManifest.xml
turtlebot_android_roconconnector/: AndroidManifest.xml  project.properties  project.properties~
(+187 files in other folders)
