<?xml version="1.0"?>
<package>
  <name>rocon_android_application_management</name>
  <version>0.1.0</version>
  <description>
    Components for android application management - used by the robot and
    rocon remoticons.
  </description>

  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rocon_android_application_management</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_android</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_android/issues</url>

  <author email="d.stonier@gmail.com">Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_tools</build_depend>
  <build_depend>android_gingerbread</build_depend>

</package>
